[package]
name = "hexevent"
version = "0.1.0"
edition = "2021"
exclude = [
    ".idea/**/*",
    ".*/**/*",
]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/JustFoxx/hexevent"
description = "Simple callback event system for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

